--- a/client/Components/Sidebar/Sidebar.scss
+++ b/client/Components/Sidebar/Sidebar.scss
@@ -67,10 +67,11 @@ nav-text a {
     align-items: center;
 }
 
-// NOTE: This rule affected text alignment in buttons
-// span {
-//     margin-left: 16px;
-// }
+/* NOTE: This rule affected text alignment in buttons
+span {
+    margin-left: 16px;
+}
+*/
 
 .nav-menu.active::-webkit-scrollbar {
     width: 10px;
@@ -82,6 +83,7 @@ nav-text a {
     border: 2px solid #0b0c0f;
 }
 
+/* changes scrollbar thumb color to aqual when global state 'personalized' is true */
 .nav-menu.personalized {
     left: 0;
     transition: 350ms;
