fixed infowindow white text by moving css rules to style.css in public

--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,11 @@
   height: 400px;
 }
 
-
 .menu {
   position: relative;
 }
+
+.gm-style .gm-style-iw-c * {
+    font-family: Montserrat, sans-serif;
+    color: #000a47;
+ }
