styled global scrollbar

--- a/public/style.css
+++ b/public/style.css
@@ -11,3 +11,13 @@
     font-family: Montserrat, sans-serif;
     color: #000a47;
  }
+
+body::-webkit-scrollbar {
+    width: 10px;
+    background-color: rgba(11, 12, 15, 0.5);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #1de9b6;
+    border: 2px solid #0b0c0f;
+}
