updated scroll bar

--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,12 @@
     color: #000a47;
  }
 
-body{
-  overflow-y: scroll,
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: rgba(11, 12, 15, 0.5);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #1de9b6;
+    border: 2px solid #0b0c0f;
 }
