--- a/public/style.css
+++ b/public/style.css
@@ -21,3 +21,8 @@
     background-color: #1de9b6;
     border: 2px solid #0b0c0f;
 }
+
+.MuiPaper-root.MuiMenu-paper.MuiPopover-paper.MuiPaper-elevation0.MuiPaper-rounded::-webkit-scrollbar-thumb {
+    background-color: #c9c9c9;
+    border: 1.5px solid #838282;
+}
